# stockzrs-metrics-service

./: .env.tpl  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: deploy.yml
k8s/: stockzrs-metrics-service-deployment.yml
stockzrs_metrics_service/: main.py  server.py
stockzrs_metrics_service/controllers/: carousel.py  chart_controller.py
stockzrs_metrics_service/models/: minute_by_minute_aggregates.py
stockzrs_metrics_service/routes/: carousel.py  chart.py  init_routes.py
stockzrs_metrics_service/utils/: db.py  logger.py
